test/Fail/Issue4371.err
Issue4371.agda:19.13-15: warning: -W[no]RewriteVariablesNotBoundByLHS
ok  is not a legal rewrite rule, since the following variables are not bound by the left hand side:  p
when checking the pragma REWRITE ok

Issue4371.agda:22.11-15: error: [UnequalTerms]
n + n != zero of type Nat
when checking that the expression refl has type n + n ≡ 0
